fix(titlebar): align buttons to the right
Also add same top and right margin to titlebar.

--- a/src/css/editor.scss
+++ b/src/css/editor.scss
@@ -7,6 +7,11 @@
 	max-width: var(--text-editor-max-width);
 	margin: auto;
 
+	&.page-title {
+		max-width: 100%;
+		margin: 0 0 0 max(0px, calc(50% - (var(--text-editor-max-width) / 2)));
+	}
+
 	// Editor document status bar
 	.document-status {
 		max-width: var(--text-editor-max-width);
